syntax = "proto3";

package test_plugin3;

option go_package = "github.com/containerd/containerd/plugins/test-plugin3/api";

service JavaRuntimeService{
	rpc CreateContainer(CreateContainerRequest) returns (CreateContainerResponse);
}

message CreateContainerRequest{
	string application_name = 1;
	string file_location = 2;
}

message CreateContainerResponse {
	string container_id = 1;
}
